<resources>
    <string name="app_name" translatable="false">Hubert</string>
    <string name="log_tag" translatable="false">MAD-group-27</string>
    <string name="default_location">Turin, Italy</string>
    <string name="default_email">john.smith@polito.it</string>
    <string name="default_nickname">MadJohn</string>
    <string name="default_fullname">John Smith</string>
    <string name="default_rating" translatable="false">4.5</string>
    <string name="since">Registered since</string>
    <string name="default_registration_date" translatable="false">25/03/2021</string>
    <string name="edit">Edit</string>
    <string name="hint_fullname">Your full name</string>
    <string name="hint_nickname">Your nickname</string>
    <string name="hint_email">Your email</string>
    <string name="hint_address">Your address</string>
    <string name="save">Save</string>
    <string name="saved_profile_preference" translatable="false">group27.lab1.saved_profile_preference</string>
    <string name="action_camera">Take a picture</string>
    <string name="action_gallery">Choose picture from gallery</string>
    <string name="profile_image" translatable="false">profile.png</string>
    <string name="profile_image_tmp" translatable="false">profile_tmp.png</string>
    <string name="validation_fullname">You must insert both your name and your surname</string>
    <string name="validation_nickname">Nickname must be at least 4 characters long</string>
    <string name="validation_email">You must insert an e-mail address</string>
    <string name="validation_location">You must insert a location</string>
    <string name="action_delete">Delete picture</string>
    <string name="toast_camera_permission_settings">Please enable camera permission in settings.</string>
    <string name="toast_storage_permission_settings">Please enable multimedia files permission in settings.</string>
    <string name="toast_camera_permission_info">Camera permission is needed to take a new profile picture.</string>
    <string name="toast_storage_permission_info">Multimedia files permission is needed to get a new profile picture from the gallery.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nickname">Nickname</string>
    <string name="email">Email</string>
    <string name="location">Location</string>
    <string name="trip_counter" translatable="false">group27.lab2.trips.id_counter</string>
    <string name="crop_error">An error occurred while getting the image, please try again</string>
    <string name="retry">Retry</string>
    <string name="temporary_edit_image_file" translatable="false">saving_tmp</string>
    <string name="image_changed_flag" translatable="false">imageChanged</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_trips">Trips</string>
    <string name="route">Route</string>
    <string name="trip_edit_title">Edit trip</string>
    <string name="profile_edit_title">Edit profile</string>
    <string name="toast_complete_previous_stop">Please complete previous stops before adding a new one</string>
    <string name="edit_from_error">Invalid departure</string>
    <string name="edit_to_error">Invalid destination</string>
    <string name="edit_to_hour_error">Invalid arrival time</string>
    <string name="insert_passengers">Invalid number</string>
    <string name="invalid_price">Invalid price</string>
    <string name="estimated_time">Estimated travel time</string>
    <string name="stop_place_error">Invalid stopping place</string>
    <string name="stop_hour_error">Invalid stopping hour</string>
    <string name="duplicated_place_error">Duplicated stop</string>
    <string name="trip_details">Trip details</string>
    <string name="trip_date">Trip departure date</string>
    <string name="available_seats">"Number of available seats : "</string>
    <string name="available_seats_display">Number of booked seats</string>
    <string name="stop">Stop</string>
    <string name="price_for_each_seat">"Price for each seat : "</string>
    <string name="price_for_each_seat_display">Price for each seat</string>
    <string name="remove">REMOVE</string>
    <string name="add">ADD</string>
    <string name="intermediate_stops">Intermediate stops</string>
    <string name="additional_options">Additional options</string>
    <string name="luggage">Luggage</string>
    <string name="animals">Animals</string>
    <string name="smokers">Smokers</string>
    <string name="additional_information">Additional information</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="fix_all_errors">Please complete the form correctly</string>
    <string name="trip_prefix" translatable="false">group27.lab2.trips.</string>
    <string name="car_image_prefix" translatable="false">group27.lab2.car_img.</string>
    <string name="date_error">Invalid date</string>
    <string name="luggage_details">There is room for luggage</string>
    <string name="animals_details">Animals are allowed</string>
    <string name="smokers_details">Smoking allowed</string>
    <string name="additional_information_details">Extra information</string>
    <string name="trip_to">Trip to</string>
    <string name="add_trip">Add trip</string>
    <string name="nav_my_trips">My Trips</string>
    <string name="passengers_details">Travelers\' details</string>
    <string name="interested_passengers">Interested travelers</string>
    <string name="accepted_passengers">Accepted travelers</string>
    <string name="accept">ACCEPT</string>
    <string name="seats_finished">Seats are complete, add new ones</string>
    <string name="date_and_time_both_present">You should select also the date if you select the hour</string>
    <string name="date_not_in_past">Date cannot be in the past</string>
    <string name="welcome">Welcome!</string>
    <string name="warning_message_notrips_otherstriplist">There are no trips yet…<br />Or have you applied too many filters? 🤔</string>
    <string name="warning_message_alreadybooked">You have already booked this trip!</string>
    <string name="success_message_booked">You have successfully booked this trip!</string>
    <string name="warning_message_failedbooking">There was an error booking this trip…<br/>Please try again.</string>
    <string name="stop_advertising">STOP ADVERTISING</string>
    <string name="search">Search</string>
    <string name="warning_message_tripfull">This trip has already reached full passenger capacity. Please look for another one.</string>
    <string name="alert_title">Are you sure?</string>
    <string name="also_travelled_with_me">Was my passenger in:</string>
    <string name="alert_message">This action can not be undone!</string>
    <string name="cancel">CANCEL</string>
    <string name="yes">YES</string>
    <string name="no_passengers_message">No passengers (for now)</string>
    <string name="upto">Up to</string>
    <string name="start_date_not_in_past">Can not be in the past</string>
    <string name="triplist_title">My Trips</string>
    <string name="otherstriplist_title">Available Trips</string>
    <plurals name="already_accepted_n_travelers">
        <item quantity="one">You already accepted %d traveler!</item>
        <item quantity="other">You already accepted %d travelers!</item>
    </plurals>
    <string name="request_accepted_title">Request accepted</string>
    <string name="seats_finished_title">Seats finished</string>
    <string name="trip_cancelled_title">Trip cancelled</string>
    <string name="seats_finished_message">Seats are finished for the trip from %s to %s of %s</string>
    <string name="request_accepted_message">Driver has accepted your request for the trip from %s to %s of %s</string>
    <string name="trip_cancelled_message">Driver has cancelled the trip from %s to %s of %s</string>
    <string name="error_equal_destination_departure">Cannot be equal to departure location</string>
    <string name="this_trip_is_unadvertised">This trip is unadvertised</string>
    <string name="passenger_reputation">Passenger</string>
    <string name="driver_reputation">Driver</string>
    <string name="boughttriplist_title">My Bought Trips</string>
    <string name="tripsofinterestlist_title">Trips Of Interest</string>
    <string name="warning_message_notrips_tripsofinterestlist">You haven\'t booked any trip yet.<br/>Try booking a new trip!<br/>Remember to check your bought trips.</string>
    <string name="warning_message_notrips_boughttriplist">You haven\'t booked any trip yet, or you haven\'t been accepted by the driver yet.<br/>Try checking your booked trips!</string>
    <string name="warning_message_notrips_triplist">You haven\'t offered any trip yet.<br/>Use the + button to add one!</string>
    <string name="driver_information">Driver information</string>
    <string name="i_travelled_with">Was my driver in:</string>
    <string name="select_location">Select location</string>
    <string name="save_profile_error">Error in profile saving. Please, try again later</string>
    <string name="rating">Ratings</string>
    <string name="location_not_exist">Selected location does not exist!</string>
    <string name="long_press">Long press to drag pinpoint or select another location</string>
    <string name="error_profile_loading">Error in loading profile from the server</string>
    <string name="error_profile_saving">Error in saving your profile into the server</string>
    <string name="review_title_mine">Review of %1$s</string>
    <string name="reviews">Reviews</string>
    <string name="review_title_theirs_driver">%1$s to %2$s</string>
    <string name="warning_message_notripreviews">There are no reviews yet.<br />Use the form below to add one!</string>
    <string name="send">send</string>
    <string name="review_form_title">How was your trip with %1$s?</string>
    <string name="review_form_textfield">Leave a review for your %1$s</string>
    <string name="passenger">passenger</string>
    <string name="driver">driver</string>
    <string name="warning_message_mustrate">You must give a rating to submit a review.</string>
    <string name="success_ratingsubmitted">Your review has been submitted!</string>
    <string name="warning_message_failedrating">There was a problem submitting your review. Please retry.</string>
    <string name="no_search_results">No results for current search</string>
    <string name="apply_filter">Apply the filter</string>
    <string name="start_date">Start date</string>
    <string name="hour">Hour</string>
    <string name="other_options">Other options</string>
    <string name="sold_out">Sold Out</string>
    <string name="oauth_token_error">Error while obtaining Oauth token. Notification will not work</string>
    <string name="credentials_error">Error while logging in with your credentials, please retry</string>
    <string name="firebase_login_error">Cannot login to Firebase services, please retry</string>
    <string name="reservation_confirm_notification_success" >All passengers has been correctly notified about the confirmation</string>
    <string name="reservation_confirm_notification_error" >Cannot notify all passengers about the confirmation</string>
    <string name="reservation_terminated_notification_success" >Correctly notified awaiting passengers that seats have run out</string>
    <string name="reservation_termination_notification_error" >Cannot notify awaiting passengers about seats running out</string>
    <string name="trip_cancelled_notification_success" >All confirmed passengers has been correctly notified about the cancellation of your trip</string>
    <string name="trip_cancelled_notification_error" >Cannot notify all confirmed passengers about trip cancellation</string>
</resources>