<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.CarPooling.AppBarOverlay">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:background="?attr/colorPrimary"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/Theme.CarPooling.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.trip.tripfilter.TripFilterFragment"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/from_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/from"
            app:startIconDrawable="@drawable/ic_baseline_place_24"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/to_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/to"
            android:layout_margin="8dp"
            app:startIconDrawable="@drawable/ic_baseline_place_24"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/start_date"
                android:layout_weight="9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/start_date"
                app:endIconCheckable="true"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_baseline_calendar_today_24"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="editHour"
                    android:maxLines="1"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:cursorVisible="false"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/start_hour"
                android:layout_weight="8"
                android:layout_width="0dp"
                android:hint="@string/hour"
                android:layout_height="wrap_content"
                app:endIconCheckable="true"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_round_access_time_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:maxLines="1"
                    android:layout_marginLeft="8dp"
                    android:tag="editHour" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/price_for_each_seat_display"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_marginLeft="16dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/min_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1€"
                android:layout_gravity="end|center_vertical"
                android:textAlignment="textEnd"/>
            <com.google.android.material.slider.RangeSlider
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="6"
                android:valueFrom="0.0"
                android:valueTo="500.0"
                app:values="@array/initial_price_filter"
                app:labelBehavior="gone"
                android:id="@+id/price_range"/>
            <TextView
                android:id="@+id/max_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1000€"
                android:textAlignment="textStart"
                android:layout_gravity="start|center_vertical"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/other_options"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_marginLeft="16dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/darker_gray"/>
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/options_chip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.chip.Chip
                android:tag="luggage"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/ic_baseline_luggage_24"
                app:chipIconVisible="true"
                android:text="@string/luggage"/>
            <com.google.android.material.chip.Chip
                android:tag="animals"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/ic_baseline_pets_24"
                app:chipIconVisible="true"
                android:text="@string/animals"/>
            <com.google.android.material.chip.Chip
                android:tag="smoke"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/ic_baseline_smoking_rooms_24"
                app:chipIconVisible="true"
                android:text="@string/smokers"/>
        </com.google.android.material.chip.ChipGroup>
            <View
                android:layout_width="match_parent"
                android:layout_height="64dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/apply_filter"
        app:icon="@drawable/ic_baseline_search_24"
        />
</androidx.coordinatorlayout.widget.CoordinatorLayout>